fix player size and spacing

--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -1,4 +1,5 @@
 .hero {
   width: 100%;
   color: rgba(242, 244, 246, 0.7);
+  margin-top: 9px;
 }
