--- a/styles/global.css
+++ b/styles/global.css
@@ -62,6 +62,8 @@ section p {
 
 article {
   width: 100%;
+  max-width: 100rem;
+  margin: 1rem auto;
 }
 
 article a {
